--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crappy Paint</title>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <main>
-        
+        <section>
+            <div id="gridArea">
+                
+            </div>
+            <button id="gridBtn">Make grid</button>
+            <input type="number" name="gridSize" id="gridSize">
+        </section>
     </main>
 </body>
 </html>
