Change button functionality to show a popup

--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
 <body>
     <main>
         <section>
-            <button id="gridBtn">Make grid</button>
-            <input type="number" name="gridSize" id="gridSize" value="10">
-            <div id="gridArea" class="grid">
-                
-            </div>
+            <button id="buildGridBtn">Make grid</button>
+            <div id="gridArea" class="grid"></div>
         </section>
     </main>
 </body>
